@@ -3,6 +3,10 @@
 	* HyperLink.cs: Fix bug in ImageUrl when webform is in subfolder. Don't use image that 
 	  not in child collection 
 
+2008-06-10  Noam Lampert  <noaml@mainsoft.com>
+
+	* ListItemCollection.cs: Provide viewstate for dirty collection even if it is empty.
+
 2008-03-12  Vladimir Krasnov  <vladimirk@mainsoft.com>
 
 	* AutoGeneratedField.cs, CheckBoxField.cs: fixed OnDataBindField,
